010 - Setup Spring JPA + Entity + Repository + integration test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=angular-backoffice-backend
 
 server.port=8099
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/angular-backoffice
+#spring.datasource.username=postgresql
+#spring.datasource.password=unepomme
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
