004 - Auth JWT ok

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,5 @@ spring.security.oauth2.client.provider.github.token-uri=https://github.com/login
 spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
 
 # JWT Configuration
-jwt.secret=myjwtsecretkey
+jwt.secret=uAzX6lTyNMNdnK9XnjHz2+zJZutw/M571NsmzREdSiE=
 jwt.expiration=3600000
