004 - fix token error expired

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,4 @@ spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.c
 
 # JWT Configuration
 jwt.secret=uAzX6lTyNMNdnK9XnjHz2+zJZutw/M571NsmzREdSiE=
-jwt.expiration=3600000
+jwt.expiration=60000
